--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>BlogueIno</h1>
+    <button><a href="./apropos.html">A propos</a></button>
+    <button><a href="./contact.html">Contacter nous</a></button>
+    <button><a href="./articles.html">Nos articles</a></button>
     <ul>
         <li>Home</li>
         <li>Mes articles</li>
